# FisioAccess

./: .gitignore  Cargo.toml  README.md  fisioaccess.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
crates/fisio-core/: Cargo.toml
crates/fisio-core/src/: lib.rs  traits.rs  types.rs  utils.rs
crates/fisio-data/: Cargo.toml
crates/fisio-data/src/: exporter.rs  lib.rs  logger.rs
crates/fisio-ecg/: Cargo.toml
crates/fisio-ecg/src/: bpm_detector.rs  handler.rs  lead_off.rs  lib.rs
crates/fisio-emg/: Cargo.toml
crates/fisio-emg/src/: calibration.rs  converter.rs  handler.rs  lib.rs  processor.rs
crates/fisio-filters/: Cargo.toml
crates/fisio-filters/src/: butterworth.rs  lib.rs  moving_avg.rs  notch.rs  traits.rs
crates/fisio-http/: Cargo.toml
crates/fisio-http/src/: lib.rs  sender.rs  websocket.rs
crates/fisio-serial/: Cargo.toml
crates/fisio-serial/src/: events.rs  lib.rs  manager.rs  port.rs
crates/fisio-spiro/: Cargo.toml
crates/fisio-spiro/src/: curves.rs  handler.rs  lib.rs  test_manager.rs
docs/: architecture.md  emg-ads1115-guide.md
firmware/: codigo_robusto.ino  emg_ads1115.ino
firmware/ecg_ad8232/: ecg_ad8232.ino
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/components/layout/: PageHeader.tsx  Sidebar.tsx
src/components/shared/: CalibrationPanel.tsx  ECGCanvas.tsx  EMGCanvas.tsx  FilterPanel.tsx  MarkerPanel.tsx  PhaseComparison.tsx  ProtocolRunner.tsx  ReportPreview.tsx  SerialSelect.tsx  SignalChart.tsx  StatusBadge.tsx  VUMeter.tsx
src/components/ui/: Button.tsx  Card.tsx
src/hooks/: useSerial.ts
src/lib/: dsp.ts  export.ts  markers.ts  peaks.ts
src/pages/: Dashboard.tsx  ECGMonitor.tsx  EMGMonitor.tsx  Settings.tsx  SpiroMonitor.tsx
src/stores/: useCalibrationStore.ts  useReportStore.ts  useThemeStore.ts  useWorkspaceStore.ts
src/utils/: ecgScale.ts  sampleRateDetector.ts  signalCalibrator.ts
