[package]
name = "fisioacces-app"
version = "0.1.0"
description = "Aplicación integrada para monitoreo de señales médicas"
authors = ["FisioAccess Team"]
edition = "2021"

[lib]
name = "fisioacces_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
fisio-core = { path = "../crates/fisio-core" }
fisio-serial = { path = "../crates/fisio-serial" }
serialport = "4.2"
