[package]
name = "fisio-ecg"
version = "0.1.0"
edition = "2021"
description = "Módulo de procesamiento de señales ECG"

[dependencies]
fisio-core = { path = "../fisio-core" }
fisio-serial = { path = "../fisio-serial" }
fisio-filters = { path = "../fisio-filters" }
tokio.workspace = true
serde.workspace = true
log.workspace = true
